--- a/.github/workflows/build-main.yml
+++ b/.github/workflows/build-main.yml
@@ -1,13 +1,17 @@
 name: Build release candidate
 
 env:
-  OUTPUT_PATH: ${{ github.workspace }}/.nupkg
-  DOTNET_VERSION: "3.1.100"
+  #AZURE_WEBAPP_NAME: githubactiondemo  # set this to your application's name
+  #AZURE_WEBAPP_PACKAGE_PATH: ${{ github.workspace }} # set this to the path to your web app project
+  JAVA_VERSION: '1.8'                # set this to the node version to use
+  #AZURE_WEBAPP_PUBLISH_PROFILE: ${{ secrets.AZURE_PUBLISH_PROFILE }}     # set GH repo secret with the publish profile of the web app
+  GITHUB_REPOSITORY : ${{github.repository}}
+  OUTPUT_PATH: ${{ github.workspace }}/.artifacts
 
 on:
   push:
     branches:
-      - main
+      - master
 
 jobs:
   build:
@@ -16,20 +20,13 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
 
-      - name: Setup Dotnet ${{ env.DOTNET_VERSION }}
-        uses: actions/setup-dotnet@v1
+      - name: Set up JDK 1.8
+        uses: actions/setup-java@v1
         with:
-          dotnet-version: ${{ env.DOTNET_VERSION }}
-
-      - name: Restore dotnet tools
-        run: dotnet tool restore
-
-      - name: Generate packages
-        run: dotnet fake run ./build.fsx --target Release
-
-      - name: Set Version
-        run: dotnet fake run ./build.fsx --target SetVersionForCI
-
+            java-version: ${{ env.JAVA_VERSION }}
+      - name: Build with Maven
+        run: mvn package --file pom.xml
+      
       - name: Create version file
         run: echo ${{ env.package_version }} >> ${{ env.OUTPUT_PATH }}/version.txt
 
