--- a/pom.xml
+++ b/pom.xml
@@ -16,9 +16,9 @@
 
 	<properties>
 		<java.version>1.8</java.version>
-		  <sonar.projectKey>CGDemoOrg_GitHubOrgDemo</sonar.projectKey>
+<!-- 		  <sonar.projectKey>CGDemoOrg_GitHubOrgDemo</sonar.projectKey>
 		  <sonar.organization>cgdemoorg</sonar.organization>
-		  <sonar.host.url>https://sonarcloud.io</sonar.host.url>
+		  <sonar.host.url>https://sonarcloud.io</sonar.host.url> -->
 	</properties>
 	
 
